--- a/execution_tree/tsconfig.json
+++ b/execution_tree/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "CommonJS",
     "rootDir": "./",
     "outDir": "./dist",
-    "strict": false,
+    "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "skipLibCheck": true
